<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_margin="@dimen/margin_10"
        android:contentDescription="@string/app_name"/>

    <LinearLayout
        android:layout_margin="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_customer_details"
            android:text="@string/customer_details"
            android:layout_margin="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_new_flight"
            android:layout_margin="10dp"
            android:text="@string/book_new_flight"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/btn_flight_details"
            android:text="@string/flight_details"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/btn_cancel_flight"
            android:text="@string/cancel_flight"/>
    </LinearLayout>

</LinearLayout>