<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_5"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_5"
        android:orientation="horizontal"
        android:background="@drawable/border">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/tv_seats"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/seats_25"
            android:layout_margin="@dimen/margin_5"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/tv_pass_code"
            android:gravity="end"
            android:layout_gravity="center"
            android:text="@string/passenger_code"
            android:layout_margin="@dimen/margin_5"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/btn_cancel"
        android:layout_margin="@dimen/margin_5"
        android:layout_gravity="end"
        android:textColor="@android:color/white"
        android:background="@drawable/cancel_button_border"/>

</LinearLayout>